# dvda

./: CompileTest.hs  Dvda.hs  Expr.hs  LICENSE  MExample.hs  README.txt  RunTests.hs  TestMain.hs  dvda.cabal  had.cabal  stack.yaml
AD/: AD.hs  Expr.hs  Rad.hs  Simplify.hs
Dvda/: AD.hs  BinUn.hs  CFunction.hs  CGen.hs  CSE.hs  CallNative.hs  Codegen.hs  Config.hs  Dot.hs  Dual.hs  Examples.hs  Expr.hs  FunGraph.hs  GExpr.hs  Graph.hs  HList.hs  HSBuilder.hs  HSSyntax.hs  HashMap.hs  HomoDim.hs  Llvm.hs  MS.hs  MSCoctave.hs  MSDSL.hs  MSDSLExample.hs  MSExample.hs  MSMonad.hs  MultipleShooting.hs  OctaveSyntax.hs  OldExamples.hs  Reify.hs  ReifyGraph.hs  Shape.hs  ShowExprTests.hs  SparseLA.hs  SymMonad.hs  Vis.hs
Dvda/Codegen/: CBuilder.hs  CCallWrapper.hs  CFunction.hs  CGen.hs  CPlugins.hs  CSyntax.hs  Gcc.hs  HSBuilder.hs  HSSyntax.hs  PythonGen.hs  Utils.hs  WriteFile.hs
Dvda/MultipleShooting/: CartpoleMs.hs  CoctaveTemplates.hs  MSCoctave.hs  MSMonad.hs  MultipleShooting.hs  Types.hs
Dvda/Tests/: Function.hs  Unary.hs
Dvda2/: BinUn.hs  Dim.hs  Examples.hs  Expr.hs  StrongExpr.hs  SymMonad.hs
Had/: Expr.hs  Fad.hs  Rad.hs  Simplify.hs
Had/AD/: Fad.hs  Rad.hs
Had/Expr/: ElemwiseType.hs  Expr.hs  ExprExample.hs  ExprToGraph.hs  Op2Type.hs  SourceType.hs
Ideas/: BinUn.hs  Dim.hs  Dual.hs  Examples.hs  Expr.hs  Graph.hs  StrongExpr.hs  SymMonad.hs  SymMonadTF.hs
MutableDvda/: AD.hs  CGen.hs  Examples.hs  Expr.hs  FullShow.hs  FunGraph.hs  Graph.hs  Reify.hs  ReifyGraph.hs  SharedVar.hs  Utils.hs
MutableDvda/MultipleShooting/: MSCoctave.hs  MSMonad.hs  Types.hs
Numeric/: Dvda.hs
Numeric/Dvda/: AD.hs  Codegen.hs  Config.hs  Dim.hs  Examples.hs  Expr.hs  ExprGraph.hs  Function.hs  GNode.hs  Graph.hs  Simplify.hs  Substitute.hs  Symbolic.hs  Vis.hs
Numeric/Dvda/AD/: Dual.hs  Fad.hs  Rad.hs
Numeric/Dvda/Codegen/: CFunction.hs  CallHaskell.hs  CallWrapper.hs  Codegen.hs  Config.hs  GenerateC.hs  GenerateHaskell.hs  WriteC.hs
Numeric/Dvda/Expr/: Apply.hs  Arbitrary.hs  Binary.hs  BinaryType.hs  ElemwiseType.hs  Evaluate.hs  Expr.hs  ExprExample.hs  ExprToGraph.hs  Matrix.hs  Misc.hs  Op2Type.hs  Properties.hs  Scalar.hs  SourceType.hs  Substitute.hs  Unary.hs  UnaryType.hs  Vector.hs
Numeric/Dvda/Internal/: Binary.hs  BinaryType.hs  Expr.hs  ExprGraph.hs  ExprUtils.hs  GNode.hs  Matrix.hs  Scalar.hs  Tensor.hs  Unary.hs  UnaryType.hs  Vector.hs
Numeric/Dvda/Simplify/: RemovePlusZero.hs  RemoveTimesOne.hs  Simplify.hs
Numeric/Dvda/Symbolic/: BinUn.hs  Examples.hs  Expr.hs  SymMonad.hs
Numeric/Dvda/Tests/: ArbitraryExpr.hs  Tests.hs
dvda/: Dvda.hs  LICENSE  StressTest.hs  dvda.cabal
dvda-llvm/: dvda-llvm.cabal
dvda-llvm/Dvda/: Llvm.hs
dvda/Dvda/: AD.hs  Alg.hs  Algorithm.hs  Dual.hs  Examples.hs  Expr.hs  FunGraph.hs  HSBuilder.hs  OldExamples.hs  Reify.hs  RuntimeAlg.hs  ShowExprTests.hs  Vis.hs
dvda/Dvda/Algorithm/: Construct.hs  Eval.hs  FunGraph.hs  Reify.hs
dvda/Dvda/Codegen/: CCallWrapper.hs  CGen.hs  PythonGen.hs  Utils.hs  WriteFile.hs
dvda/typesystemTests/: SpecialBroadcastFunctions.hs
test/: Test.hs
typesystemTests/: MultiParamAndFunDeps.hs  SpecialBroadcastFunctions.hs
