Name:                dvda
Version:             0.1
License:             BSD3
License-file:        LICENSE
Author:              Greg Horn
Maintainer:          ghorn@stanford.edu
Stability:           Experimental
Category:            Math
Build-type:          Simple
Synopsis:            Automatic differentiation on symbolic expression trees.
Description:         DVDA Verifiably Differentiates Algorithmically
Cabal-version:       >=1.2

Library
  Exposed-modules:   Numeric.Dvda
                     Numeric.Dvda.AD
                     Numeric.Dvda.Expr
                     Numeric.Dvda.Simplify
--                     Numeric.Dvda.Examples
--                     Numeric.Dvda.Tests.Tests
  Build-depends:     base, graphviz, fgl, text, directory, MissingH, process, unix, QuickCheck
  Ghc-options:       -O2 -Wall
