Name:                dvda
Version:             0.2.2
License:             BSD3
License-file:        LICENSE
Author:              Greg Horn
Maintainer:          gregmainland@gmail.edu
Copyright:           (c) 2011 - 2012 Greg Horn
                     (c) 2009 Andy Gill
Stability:           Experimental
Category:            Numerical, Math
Build-type:          Custom
Synopsis:            Efficient automatic differentiation and code generation
Cabal-version:       >= 1.8
--Description: {
--dvda == DVDA Verifiably Differentiates Algorithmically
--.
--This library provides a symbolic type `Dvda.Expr` which is
--manipulated mathematically through its Num\/Fractional\/Floating instances.
--Expr can be a scalar, vector, or matrix. Binary operations (adding\/multiplying\/etc)
--are all elementwise.
--.
--Matrix/vector/scalar safety is enforced at compile time
--.
--
--Efficient derivatives can be computed. Internally reverse automatic differentiation
--is performed including efficient common subexpression elimination.
--.
--Function graphs can be JIT compiled into efficient functions using "buildHSFunction".
--This is the intended way to use this library.
--.
--Pretty graphviz plots!
--.
--If the runtime JIT stuff works in terminal ghci but not emacs haskell-mode, you may need to add
--`(setenv "PATH" (concatenate 'string (getenv "PATH") ":/usr/local/bin"))` to your .emacs file
--.
--To get started look in `Dvda.Examples` or CompileTest.hs in the github repo
--}

source-repository head
  type: git
  location: git://github.com/ghorn/dvda.git
--  tag: 

Flag stressTest
  Description: Build a profilable hard executable
  Default: False

Library
  Exposed-modules:   Dvda
                     Dvda.BinUn
                     Dvda.CallNative
                     Dvda.Codegen
                     Dvda.Config
                     Dvda.Dual
                     Dvda.Examples
                     Dvda.Expr
                     Dvda.Graph
                     Dvda.MultipleShooting.MSCoctave
                     Dvda.MultipleShooting.MSMonad
                     Dvda.MultipleShooting.MultipleShooting
                     Dvda.MultipleShooting.Types
                     Dvda.OctaveSyntax
                     Dvda.Shape
                     Dvda.SparseLA
                     Dvda.SymMonad
                     Dvda.Tests.Function
                     Dvda.Tests.Unary

  Other-modules:     Dvda.HashMap
                     MutableDvda.AD
                     MutableDvda.CGen
                     MutableDvda.Expr
                     MutableDvda.FunGraph
                     MutableDvda.Graph
                     MutableDvda.MultipleShooting.MSMonad
                     MutableDvda.MultipleShooting.Types
                     MutableDvda.Reify
                     MutableDvda.ReifyGraph

  Build-depends:     base       >= 4     && < 5,
                     file-location >= 0.4.4 && < 0.5,
                     hashable  >= 1.1 && < 1.2,
                     containers >= 0.4 && < 0.5,
                     unordered-containers  >= 0.2 && < 0.3,
                     hashtables  >= 1.0.1.6 && < 1.1,
                     graphviz >= 2999.12 && < 2999.13,
                     fgl >= 5.4 && < 5.5,
                     mtl >= 2.0 && < 2.1,
                     directory >= 1.1 && < 1.2,
                     latc >= 0.0.2 && < 0.1,
                     QuickCheck == 2.4.*,
                     test-framework-quickcheck2,
                     test-framework
--                     process >= 1.1 && < 1.2,
--                     text >= 0.11 && < 0.12,
--                     plugins >= 1.5 && < 1.6,
--                     unix
--                     text,

  Ghc-options:       -Wall
  GHC-Prof-Options:  -prof -fprof-auto -fprof-cafs -rtsopts
  GHC-Shared-Options: -fPIC


flag test
  description: Build test program.
  default:     False

Test-suite test
  type:		     exitcode-stdio-1.0
  hs-source-dirs:    .
  main-is:           TestMain.hs
  build-depends:     base,
                     dvda,
                     file-location >= 0.4.4 && < 0.5,
                     hashable  >= 1.1 && < 1.2,
                     containers >= 0.4 && < 0.5,
                     unordered-containers  >= 0.2 && < 0.3,
                     graphviz >= 2999.12 && < 2999.13,
                     fgl >= 5.4 && < 5.5,
                     mtl >= 2.0 && < 2.1,
                     directory >= 1.1 && < 1.2,
                     latc >= 0.0.2 && < 0.1,
                     QuickCheck == 2.4.*,
--                     directory >= 1.1 && < 1.2,
                     ad,
                     test-framework-quickcheck2,
                     test-framework
  ghc-options:       -Wall
