Name:                dvda-llvm
Version:             0.4
License:             BSD3
License-file:        LICENSE
Author:              Greg Horn
Maintainer:          gregmainland@gmail.edu
Copyright:           (c) 2013 Greg Horn
Stability:           Experimental
Category:            Numerical, Math
Build-type:          Custom
Synopsis:            LLVM JIT for Dvda symbolics
Cabal-version:       >= 1.8

source-repository head
  type: git
  location: git://github.com/ghorn/dvda.git
--  tag: 

Library
  Exposed-modules:   Dvda.Llvm

  Build-depends:     base       >= 4     && < 5,
                     hashable  >= 1.2 && < 1.3,
                     vector >= 0.10,
--                     containers >= 0.5 && < 0.6,
--                     unordered-containers  >= 0.2 && < 0.3
                     dvda >= 0.4,
                     llvm-general-pure >= 3.3.7.2,
                     llvm-general >= 3.3.7.2,
                     transformers >= 0.3.0

  Ghc-options:       -Wall -O2
  GHC-Prof-Options:  -Wall -O2 -prof -fprof-auto -fprof-cafs -rtsopts
  GHC-Shared-Options: -fPIC
